plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'dev.kostromdan.mods'
version = ''

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

repositories {
    mavenCentral()
    maven {
        url 'https://repo.lwjgl.org/'
    }
    maven {
        url = "https://maven.wagyourtail.xyz/snapshots"
    }
    maven {
        name = "sponge"
        url = "https://repo.spongepowered.org/maven"
    }
}

def lwjglVersion = '3.1.0'
def lwjglNatives = {
    def osName = System.getProperty('os.name').toLowerCase()
    if (osName.contains('win')) {
        return 'natives-windows'
    } else if (osName.contains('mac')) {
        return 'natives-macos'
    } else if (osName.contains('nix') || osName.contains('nux') || osName.contains('aix')) {
        return 'natives-linux'
    } else {
        throw new GradleException('Unsupported operating system')
    }
}()

dependencies {
    implementation 'org.apache.logging.log4j:log4j-core:2.0-beta9'
    implementation 'org.apache.logging.log4j:log4j-api:2.0-beta9'
    implementation 'com.electronwill.night-config:toml:3.6.3'
    implementation 'com.electronwill.night-config:json:3.6.3'
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'net.java.dev.jna:jna:4.4.0'
    implementation 'net.java.dev.jna:platform:3.4.0'
    implementation 'oshi-project:oshi-core:1.1'


    implementation "org.lwjgl:lwjgl:$lwjglVersion"
    runtimeOnly "org.lwjgl:lwjgl:$lwjglVersion:$lwjglNatives"
    implementation "org.lwjgl:lwjgl-vulkan:$lwjglVersion"

    implementation project(path: ':common_config')
}

jar {
    manifest {
        attributes(
                'Main-Class': 'dev.kostromdan.mods.crash_assistant.app.class_loading.Boot',
                'Enable-Native-Access': 'ALL-UNNAMED' // Java 22+ prevents warnings and upcoming JNI restrictions in Java 25+
        )
    }
}

shadowJar {
    from("$rootDir/LICENSE.md") {
        rename { "CRASH_ASSISTANT_LICENSE.md" }
        into ""
    }
    from("$rootDir/thirdparty") {
        into "thirdparty"
    }

    evaluationDependsOn(':common_config')
    dependsOn project(':common_config').tasks.named('shadowJar')
    archiveClassifier.set('')

    // Relocate Night Config packages
    relocate 'com.electronwill.nightconfig', 'dev.kostromdan.mods.crash_assistant.nightconfig'

    dependencies {
        exclude(dependency('org.apache.logging.log4j:.*'))
        exclude(dependency('commons-io:commons-io:2.15.1'))
        exclude(dependency('com.electronwill.night-config:.*'))
        exclude(dependency('net.java.dev.jna:.*'))
        exclude(dependency('oshi-project:.*'))
        exclude(dependency('org.lwjgl:.*'))
        exclude(project(':common_config'))
    }
}

build.finalizedBy(shadowJar)
